--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ seisflow = {git = "https://github.com/ziyixi/seisflow.git", rev = "master"}
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
 pylint = "^2.12.2"
+ipython = "^8.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
