--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pyasdf = "^0.7.5"
 scipy = ">1.8.0"
 pyproj = "^3.3.0"
 numpy = "~1.21"
+seisflow = {git = "https://github.com/ziyixi/seisflow.git"}
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
