--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ scipy = ">1.8.0"
 pyproj = "^3.3.0"
 numpy = "~1.21"
 seisflow = {git = "https://github.com/ziyixi/seisflow.git"}
+ipykernel = "^6.23.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
